[package]
name = "elastic-array-plus"
version = "0.9.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
description = "Elastic vector backed by fixed size array"
repository = "https://github.com/debris/elastic-array"

[lib]
name = "elastic_array"

[dependencies]
heapsize = { version = "0.4", optional = true }

[features]
default = ["std"]
std = []
heapsizeof = ["heapsize"]

[dev-dependencies]
rand = "0.3"
