[package]
name = "elastic-array-plus"
version = "0.9.1"
authors = ["debris <marek.kotewicz@gmail.com>", "Wei Tang <hi@that.world>"]
license = "MIT"
description = "Elastic vector backed by fixed size array"
repository = "https://github.com/sorpaas/elastic-array"
keywords = ["no_std"]

[lib]
name = "elastic_array"

[dependencies]
heapsize = { version = "0.4", optional = true }

[features]
default = ["std"]
std = []
heapsizeof = ["heapsize"]

[dev-dependencies]
rand = "0.3"
